@@ -15,6 +15,18 @@
  */
 package dev.ikm.komet.kview.mvvm.view.search;
 
+import static dev.ikm.komet.framework.events.FrameworkTopics.SEARCH_SORT_TOPIC;
+import static dev.ikm.komet.kview.events.SearchSortOptionEvent.SORT_BY_COMPONENT;
+import static dev.ikm.komet.kview.events.SearchSortOptionEvent.SORT_BY_COMPONENT_ALPHA;
+import static dev.ikm.komet.kview.events.SearchSortOptionEvent.SORT_BY_SEMANTIC;
+import static dev.ikm.komet.kview.events.SearchSortOptionEvent.SORT_BY_SEMANTIC_ALPHA;
+import static dev.ikm.komet.kview.mvvm.model.DragAndDropType.CONCEPT;
+import static dev.ikm.komet.kview.mvvm.model.DragAndDropType.PATTERN;
+import static dev.ikm.komet.kview.mvvm.model.DragAndDropType.SEMANTIC;
+import static dev.ikm.komet.kview.mvvm.model.DragAndDropType.STAMP;
+import static dev.ikm.komet.kview.mvvm.viewmodel.FormViewModel.CURRENT_JOURNAL_WINDOW_TOPIC;
+import static dev.ikm.komet.kview.mvvm.viewmodel.FormViewModel.VIEW_PROPERTIES;
+import static dev.ikm.komet.kview.mvvm.viewmodel.JournalViewModel.WINDOW_VIEW;
 import dev.ikm.komet.framework.dnd.DragImageMaker;
 import dev.ikm.komet.framework.dnd.KometClipboard;
 import dev.ikm.komet.framework.events.EvtBus;
@@ -22,13 +34,13 @@ import dev.ikm.komet.framework.events.EvtBusFactory;
 import dev.ikm.komet.framework.events.Subscriber;
 import dev.ikm.komet.framework.search.SearchPanelController;
 import dev.ikm.komet.framework.view.ObservableViewNoOverride;
+import dev.ikm.komet.framework.view.ObservableViewWithOverride;
 import dev.ikm.komet.framework.view.ViewProperties;
 import dev.ikm.komet.kview.controls.AutoCompleteTextField;
 import dev.ikm.komet.kview.controls.FilterOptionsPopup;
 import dev.ikm.komet.kview.events.SearchSortOptionEvent;
 import dev.ikm.komet.kview.mvvm.model.DragAndDropInfo;
 import dev.ikm.komet.kview.mvvm.model.DragAndDropType;
-import dev.ikm.komet.kview.mvvm.view.AbstractBasicController;
 import dev.ikm.komet.kview.mvvm.viewmodel.NextGenSearchViewModel;
 import dev.ikm.komet.navigator.graph.Navigator;
 import dev.ikm.komet.navigator.graph.ViewNavigator;
@@ -41,9 +53,13 @@ import dev.ikm.tinkar.coordinate.stamp.StateSet;
 import dev.ikm.tinkar.coordinate.stamp.calculator.Latest;
 import dev.ikm.tinkar.coordinate.stamp.calculator.LatestVersionSearchResult;
 import dev.ikm.tinkar.coordinate.view.ViewCoordinate;
-import dev.ikm.tinkar.entity.*;
+import dev.ikm.tinkar.entity.ConceptEntity;
+import dev.ikm.tinkar.entity.Entity;
+import dev.ikm.tinkar.entity.EntityVersion;
+import dev.ikm.tinkar.entity.PatternEntity;
+import dev.ikm.tinkar.entity.SemanticEntity;
+import dev.ikm.tinkar.entity.StampEntity;
 import dev.ikm.tinkar.provider.search.TypeAheadSearch;
-import dev.ikm.tinkar.terms.ConceptFacade;
 import dev.ikm.tinkar.terms.EntityFacade;
 import dev.ikm.tinkar.terms.State;
 import javafx.css.PseudoClass;
@@ -65,7 +81,6 @@ import javafx.util.StringConverter;
 import org.carlfx.cognitive.loader.FXMLMvvmLoader;
 import org.carlfx.cognitive.loader.InjectViewModel;
 import org.carlfx.cognitive.loader.JFXNode;
-import org.carlfx.cognitive.viewmodel.ViewModel;
 import org.controlsfx.control.PopOver;
 import org.eclipse.collections.api.factory.Lists;
 import org.eclipse.collections.api.list.MutableList;
@@ -74,15 +89,20 @@ import org.eclipse.collections.impl.factory.primitive.IntObjectMaps;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.OptionalInt;
+import java.util.TreeMap;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
-import static dev.ikm.komet.framework.events.FrameworkTopics.SEARCH_SORT_TOPIC;
-import static dev.ikm.komet.kview.events.SearchSortOptionEvent.*;
-import static dev.ikm.komet.kview.mvvm.model.DragAndDropType.*;
 
-
-public class NextGenSearchController extends AbstractBasicController {
+public class NextGenSearchController {
 
     private static final Logger LOG = LoggerFactory.getLogger(NextGenSearchController.class);
 
@@ -117,11 +137,7 @@ public class NextGenSearchController extends AbstractBasicController {
 
     private PopOver sortOptions;
 
-    private ObservableViewNoOverride windowView;
-
     private EvtBus eventBus;
-
-    private UUID journalTopic;
 
     private FilterOptionsPopup filterOptionsPopup;
 
@@ -184,29 +200,10 @@ public class NextGenSearchController extends AbstractBasicController {
         filterOptionsPopup.filterOptionsProperty().subscribe((oldFilterOptions, newFilterOptions) -> {
             if (newFilterOptions != null && !newFilterOptions.getStatus().selectedOptions().isEmpty()) {
                 StateSet stateSet = StateSet.make(
-                        newFilterOptions.getStatus().selectedOptions().stream().map(s -> {
-                            switch (s.toUpperCase()) {
-                                case "INACTIVE":
-                                    return State.INACTIVE;
-                                case "WITHDRAWN_STATE":
-                                    return State.WITHDRAWN;
-                                case "CANCELED":
-                                    return State.CANCELED;
-                                case "PRIMORDIAL":
-                                    return State.PRIMORDIAL;
-                                default:
-                                    return State.ACTIVE;
-                            }
-                        }).collect(Collectors.toList()));
-                ViewProperties viewProperties = getViewProperties();
+                        newFilterOptions.getStatus().selectedOptions().stream().map(
+                                s -> State.valueOf(s.toUpperCase())).toList());
 
-                ViewCoordinate viewCoordinate = windowView.getViewCoordinate();
-
-                StampCoordinateRecord stampCoordinateRecord = viewCoordinate.stampCoordinate().withAllowedStates(stateSet).toStampCoordinateRecord();
-
-                ViewProperties viewPropertiesOverride = viewProperties.parentView().makeOverridableViewProperties();
-                viewPropertiesOverride.nodeView().stampCoordinate().setValue(stampCoordinateRecord);
-                updateModel(viewPropertiesOverride);
+                getViewProperties().nodeView().stampCoordinate().allowedStatesProperty().setValue(stateSet);
                 doSearch(new ActionEvent(stateSet, searchResultsListView));
             }
         });
@@ -227,14 +224,17 @@ public class NextGenSearchController extends AbstractBasicController {
         switch (newSearchResultType) {
             case TOP_COMPONENT ->
                 searchResultsListView.setCellFactory((Callback<ListView<Map.Entry<SearchPanelController.NidTextRecord, List<LatestVersionSearchResult>>>, ListCell<Map.Entry<SearchPanelController.NidTextRecord, List<LatestVersionSearchResult>>>>) param ->
-                        new SearchCellTopComponent(getViewProperties(), getJournalTopic(), windowView)
+                        //FIXME should we be passing the parentVIew at all?  we only want the overrideable view in each child node...
+                        new SearchCellTopComponent(getViewProperties(), getJournalTopic(), getViewProperties().parentView())
                 );
             case DESCRIPTION_SEMANTICS ->
                 searchResultsListView.setCellFactory((Callback<ListView<LatestVersionSearchResult>, ListCell<LatestVersionSearchResult>>) param ->
-                        new SearchCellDescriptionSemantic(getViewProperties(), getJournalTopic(), windowView));
+                        //FIXME should we be passing the parentVIew at all?  we only want the overrideable view in each child node...
+                        new SearchCellDescriptionSemantic(getViewProperties(), getJournalTopic(), getViewProperties().parentView()));
             case NID ->
                 searchResultsListView.setCellFactory((Callback<ListView<Integer>, ListCell<Integer>>) param ->
-                        new SearchCellNid(getViewProperties(), windowView, journalTopic));
+                        //FIXME should we be passing the parentVIew at all?  we only want the overrideable view in each child node...
+                        new SearchCellNid(getViewProperties(), getViewProperties().parentView(), getJournalTopic()));
         }
 
         currentSearchResultType = newSearchResultType;
@@ -474,8 +474,12 @@ public class NextGenSearchController extends AbstractBasicController {
         }
     }
 
+    public ViewProperties getViewProperties() {
+        return nextGenSearchViewModel.getPropertyValue(VIEW_PROPERTIES);
+    }
+
     private UUID getJournalTopic() {
-        return journalTopic;
+        return nextGenSearchViewModel.getPropertyValue(CURRENT_JOURNAL_WINDOW_TOPIC);
     }
 
     private String formatHighlightedString(String highlightedString) {
@@ -485,33 +489,16 @@ public class NextGenSearchController extends AbstractBasicController {
                 .replaceAll("\\s+", " ");
     }
 
-    @Override
-    public void updateView() {
 
-    }
 
-    @Override
     public void clearView() {
         searchResultsListView.getItems().clear();
     }
 
-    @Override
     public void cleanup() {
 
     }
 
-    @Override
-    public <T extends ViewModel> T getViewModel() {
-        return null;
-    }
-
-    public void setWindowView(ObservableViewNoOverride windowView) {
-        this.windowView = windowView;
-    }
-
-    public void setJournalTopic(UUID journalTopic) {
-        this.journalTopic = journalTopic;
-    }
 
     /***************************************************************************
      *                                                                         *
